Updated hardware file

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
+*.class
+/bin/
+/.classpath
+/.project
+/.settings/
+/com/
+/com.autovend.hardware_0.3/
 /.metadata/
-com.autovend.software/.classpath
-com.autovend.software/.project
-
-com.autovend.software.test/.classpath
-com.autovend.software.test/.project
-
-com.autovend.hardware_0.3/.classpath
-com.autovend.hardware_0.3/.project
 
