Changed build path to use new hardware 0.3.2

--- a/com.autovend.software/.classpath
+++ b/com.autovend.software/.classpath
@@ -6,6 +6,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="/com.autovend.hardware_0.3.1"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/com.autovend.hardware_0.3.2"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
