--- a/com.autovend.software.test/.classpath
+++ b/com.autovend.software.test/.classpath
@@ -6,8 +6,8 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="/com.autovend.hardware_0.3.1"/>
-	<classpathentry kind="src" path="/com.autovend.software"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="src" path="/com.autovend.software"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/com.autovend.hardware_0.3.2"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
